# BluePyEModel

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitreview  .install_neurodamus.sh  .pylintrc  .readthedocs.yml  .zenodo.json  AUTHORS.txt  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  COPYING  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  combos_db.sql  pyproject.toml  setup.py  sonata_ais.h5  sonata_currents.h5  tox.ini
.github/workflows/: release.yml  test.yml
BluePyEModel-0.0.8.dev2/: README.md
bluepyemodel/: __init__.py  version.py
bluepyemodel/access_point/: __init__.py  access_point.py  export_emodel.py  forge_access_point.py  local.py  nexus.py
bluepyemodel/ais_synthesis/: ais_model.py  ais_synthesis.py  bglibpy_evaluators.py  evaluators.py  plotting.py  select.py  utils.py
bluepyemodel/api/: __init__.py  databaseAPI.py  forge.yml  forge_access_point.py  nexus.py  postgreSQL.py  postgreSQL_tables.py  singlecell.py
bluepyemodel/apps/: __init__.py  emodel_release.py
bluepyemodel/data/: ISI_CV_Shai2015.csv  spike_rheobase_pA_BeaulieuLaroche2021.csv  utils.py
bluepyemodel/ecode/: __init__.py  apwaveform.py  comb.py  customfromfile.py  dehyperpol.py  dendrite.py  firepattern.py  hyperdepol.py  idrest.py  iv.py  negcheops.py  noise.py  noiseou3.py  poscheops.py  probampanmda_ems.py  ramp.py  random_square_inputs.py  sAHP.py  sahp.py  sinespec.py  spikerec.py  square.py  step.py  stimulus.py  subwhitenoise.py  synstim.py  thresholdaddition.py  whitenoise.py
doc/: Makefile  requirements_docs.txt
doc/source/: api_ref.rst  (+4 more)
examples/: README.md
stuck_df/: stuck_df_None.csv
tests/: apical_points_isec.json  conftest.py  final.json  legacy_params.json  test_apps.py  test_apps_bglibpy.py  test_apps_validation.py  test_combos.py  test_ecodes.py  test_emodel_pipeline.py  test_evaluator.py  test_local_access_point.py  test_model.py  test_model_parameters_configuration.py  test_nexus_access_point.py  test_nexus_api.py  test_protocols.py  test_singlecell_api.py  test_validation.py  utils.py
(+392 files in other folders)
